# event-scheduler

./: Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: main.py  settings.py
app/events/: crud.py  models.py  routes.py  scheduler.py
app/events/schemas/: __init__.py  event.py  time_interval.py  timetable.py
migrations/models/: 0_20210502221312_init.sql
tests/: conftest.py  factories.py  test_api.py  test_crud.py  test_models.py  test_scheduler.py
